@@ -333,3 +333,7 @@
 
 	* Prevent propagation of signal, when there is a matching target with edje GROUP.
 
+2012-02-13  Jihoon Kim
+
+	* add edje_object_part_text_input_panel_show/hide.
+      These APIs can be used in input panel manual control mode
